trying to fix word wrap issue

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -42,7 +42,7 @@ h1, h2, h3 {
 }
 
 pre {
-	word-break: keep-all;
+	word-break: keep-all !important;
 	word-wrap: break-word;
 	white-space: pre;
 	white-space: pre-wrap;
